chore: refactor to remove many sonar warnings