@@ -22,7 +22,7 @@ public class TableStoreForCsvInZipFile implements TableStore {
   static final String CSV_EXTENSION = ".csv";
   static final String TSV_EXTENSION = ".tsv";
   private final Path zipFilePath;
-  private static final Character comma = ',';
+  private static final Character COMMA = ',';
 
   public TableStoreForCsvInZipFile(Path zipFilePath) {
     this.zipFilePath = zipFilePath;
@@ -70,7 +70,7 @@ public class TableStoreForCsvInZipFile implements TableStore {
   public void writeTable(String name, List<String> columnNames, Iterable<Row> rows) {
     // skip if columnNames is empty (edge case of a table without columns yet defined, like
     // 'Version' table)
-    if (columnNames.size() == 0) {
+    if (columnNames.isEmpty()) {
       return;
     }
     if (!Files.exists(zipFilePath)) {
@@ -80,10 +80,10 @@ public class TableStoreForCsvInZipFile implements TableStore {
       Path pathInZipfile = zipfs.getPath(File.separator + name + CSV_EXTENSION);
       Writer writer = Files.newBufferedWriter(pathInZipfile);
       if (rows.iterator().hasNext()) {
-        CsvTableWriter.write(rows, writer, comma);
+        CsvTableWriter.write(rows, writer, COMMA);
       } else {
         // only header in case no rows provided
-        writer.write(columnNames.stream().collect(Collectors.joining("" + comma)));
+        writer.write(columnNames.stream().collect(Collectors.joining("" + COMMA)));
       }
       writer.close();
     } catch (IOException ioe) {
@@ -102,12 +102,13 @@ public class TableStoreForCsvInZipFile implements TableStore {
         processor.process(CsvTableReader.read(reader).iterator(), this);
       } else {
         throw new MolgenisException(
-            "Import failed: Table '"
-                + name
-                + "' has unsupported extension (should be .csv or .tsv)");
+            String.format(
+                "Import failed: Table '%s' has unsupported extension (should be .csv or .tsv)",
+                name));
       }
     } catch (IOException e) {
-      throw new MolgenisException("Import failed: Table '" + name + "' not found in file. ", e);
+      throw new MolgenisException(
+          String.format("Import failed: Table '%s' not found in file. ", name), e);
     }
   }
 
@@ -117,19 +118,18 @@ public class TableStoreForCsvInZipFile implements TableStore {
       ZipEntry entry = getEntry(zf, name);
       Reader reader = new BufferedReader(new InputStreamReader(zf.getInputStream(entry)));
       if (entry != null && entry.getName().endsWith(CSV_EXTENSION)) {
-        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false)
-            .collect(Collectors.toList());
+        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false).toList();
       } else if (entry != null && entry.getName().endsWith(TSV_EXTENSION)) {
-        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false)
-            .collect(Collectors.toList());
+        return StreamSupport.stream(CsvTableReader.read(reader).spliterator(), false).toList();
       } else {
         throw new MolgenisException(
-            "Import failed: Table '"
-                + name
-                + "' has unsupported extension (should be .csv or .tsv)");
+            String.format(
+                "Import failed: Table '%s' has unsupported extension (should be .csv or .tsv)",
+                name));
       }
     } catch (Exception e) {
-      throw new MolgenisException("Import failed: Table '" + name + "' not found in file. ", e);
+      throw new MolgenisException(
+          String.format("Import failed: Table '%s'not found in file. ", name), e);
     }
   }
 
@@ -180,11 +180,9 @@ public class TableStoreForCsvInZipFile implements TableStore {
 
   // magic function to allow file in subfolder
   private ZipEntry getEntry(ZipFile zf, String name) {
-    List<ZipEntry> result =
+    List<? extends ZipEntry> result =
         // find all files that have name as prefix
-        zf.stream()
-            .filter(e -> new File(e.getName()).getName().startsWith(name + "."))
-            .collect(Collectors.toList());
+        zf.stream().filter(e -> new File(e.getName()).getName().startsWith(name + ".")).toList();
     if (result.size() > 1) {
       throw new MolgenisException(
           "Import failed, contains multiple files of name " + name + " in different subfolders");
